--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/calendar": "^4.11.0",
+    "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.11.0",
+    "@ionic-native/email-composer": "^4.11.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "chokidar": "^2.0.4",
+    "cordova-plugin-calendar": "^5.1.2",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-email-composer": "^0.8.15",
+    "gulp": "^3.9.1",
     "ionic-angular": "3.9.2",
+    "ionic3-calendar": "^1.1.6",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -34,5 +43,12 @@
     "@ionic/app-scripts": "3.1.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-calendar": {},
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-camera": {}
+    }
+  }
 }
